# spotter-ai-django

./: .gitignore  README.md  hello.py  pyproject.toml  requirements.txt
api/: models.py  schema.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_cycles_used_trip_current_cycles_used_and_more.py  0003_rename_current_cycles_used_trip_current_cycle_used.py  0004_trip_create.py  0005_rename_create_trip_created.py
core/: settings.py
services/: env.py
